Bug 90023 - UI: Navigator item tooltip displays over two monitors
Summary: UI: Navigator item tooltip displays over two monitors
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.1.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Sarper Akdemir (allotropia)
URL:
Whiteboard: target:24.2.0 target:7.6.0.2 target:7...
Keywords:
: 92980 94972 117279 120021 141998 (view as bug list)
Depends on:
Blocks: Multimonitor
  Show dependency treegraph
 
Reported: 2015-03-15 17:09 UTC by Gordo
Modified: 2024-11-18 10:24 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments
Tooltip unreadable (53.85 KB, image/png)
2016-07-04 10:42 UTC, Samuel Mehrbrodt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gordo 2015-03-15 17:09:29 UTC
I am running dual monitors with LO on the second monitor (right position).  I have set a paragraph style to have an outline level which I use as the first paragraph of related information (essentially a chapter).  I can navigate to those sections with the Headings in the navigator which I have docked on the left side of the window.  Hovering over the headings shows the full text of the heading, but it extends over to the first monitor from the left of the mouse pointer.

1. Have two monitors and set to be side by side.
2. Open LO on second monitor (right).
3. Maximize (but say it like you are performing an action in Japanese anime; sorry about that, sometimes being serious gets to be too much).
4. New Text Document.
5. Dock Navigator on left.
6. Apply heading style.
7. Type a long heading.
8. Hover over heading in Navigator.
Expected Result:
Text is displayed to the right of the mouse pointer so that even if the first monitor is switched off, the text is all readable on the second monitor.
Result:
Text is displayed to the left of the mouse pointer and extends onto first monitor.

Incidentally, if LO is on the first monitor (or if just single monitor) and it is unmaximized, then the tooltip can display to the left of the mouse pointer.

Version: 4.4.1.2
Build ID: 45e2de17089c24a1fa810c8f975a7171ba4cd432
Comment 1 raal 2015-05-13 11:59:16 UTC
I can confirm with LO 4.4.3, win7
Comment 2 Gordo 2015-07-28 13:58:56 UTC
*** Bug 92980 has been marked as a duplicate of this bug. ***
Comment 3 Buovjaga 2015-10-13 17:31:00 UTC
*** Bug 94972 has been marked as a duplicate of this bug. ***
Comment 4 Samuel Mehrbrodt 2016-07-04 10:42:29 UTC
Created attachment 126057 [details]
Tooltip unreadable
Comment 5 Samuel Mehrbrodt 2016-07-04 10:43:26 UTC
The same problem appears with the Sidebar tab tooltips (see attachment 126057 [details]).
Comment 6 QA Administrators 2017-11-26 17:11:17 UTC Comment hidden (obsolete)
Comment 7 Buovjaga 2018-06-08 14:46:20 UTC
*** Bug 117279 has been marked as a duplicate of this bug. ***
Comment 8 Aron Budea 2018-09-27 00:05:41 UTC
*** Bug 120021 has been marked as a duplicate of this bug. ***
Comment 9 QA Administrators 2019-09-28 03:04:38 UTC Comment hidden (obsolete)
Comment 10 Aron Budea 2021-07-16 13:38:04 UTC
*** Bug 141998 has been marked as a duplicate of this bug. ***
Comment 11 Commit Notification 2023-07-17 08:09:42 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dc5163af166cb2afb9811dbf0443e1fcceafbb9a

tdf#90023: vcl: fix tooltip displaying over two monitors on Windows

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2023-07-17 11:19:01 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/2d3892f2bc51390825d6775c5f193c4864005a06

tdf#90023: vcl: fix tooltip displaying over two monitors on Windows

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2023-07-18 08:56:15 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/44d41ab98f5210a37cbcd04819a38c08a01464d4

tdf#90023: vcl: fix tooltip displaying over two monitors on Windows

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Cherry Hagopian 2024-11-18 09:32:10 UTC Comment hidden (spam)