tdf#90023: vcl: fix tooltip displaying over two monitors on Windows

To determine the WorkArea correctly in ImplSalGetWorkArea,
pass in the mouse pointer as pParentRect.

Similarly to how it has been done on:
vcl/win/window/salframe.cxx:1393

Change-Id: I43123be315c5ea146c118e8e2a582ceaaab0a35e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154442
Tested-by: Jenkins
Reviewed-by: Sarper Akdemir <sarper.akdemir.extern@allotropia.de>
(cherry picked from commit dc5163af166cb2afb9811dbf0443e1fcceafbb9a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154463
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
(cherry picked from commit 2d3892f2bc51390825d6775c5f193c4864005a06)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154466